--- a/hello.html
+++ b/hello.html
@@ -13,14 +13,16 @@
 
   <!-- /* Radio buttons to choose expression */ -->
   <div id="radio-buttons">
-    <input type="radio" id="addition" name="group1" value="add" />
-    <label for="add">addition(+)</label> <br />
-    <input type="radio" id="subtraction" name="group1" value="subtract" />
-    <label for="sub">subtraction(-)</label> <br />
+    <input type="radio" id="multiplication" name="group1" value="multi" />
+    <label for="multi">multiplication(*)</label> <br />
+    <input type="radio" id="division" name="group1" value="divide" />
+    <label for="div">division(/)</label> <br />
     <input type="radio" id="factorial" name="group1" value="factorial" />
     <label for="fact">factorial(n!)</label> <br />
     <input type="radio" id="kPermutations" name="group1" value="kPermutations" />
-    <label for="fact">kPermutations( n! / (n-k)! )</label> <br />
+    <label for="kPerm">kPermutations( n! / (n-k)! )</label> <br />
+    <input type="radio" id="GCD" name="group1" value="GCD" />
+    <label for="Euclid">Eculid's GCD</label> <br />
     <div />
     <!-- /* Additional Input for certain formulas | Hidden by default */ -->
     <div class="in3" style="visibility:hidden">
