--- a/hello.html
+++ b/hello.html
@@ -32,7 +32,7 @@
     <input type="radio" id="ArithmeticSequence" name="group1" value="ArithmeticSequence" />
     <label for="ArithSq">Arithmetic Sequence</label> <br />
     <input type="radio" id="EuclidsTriple" name="group1" value="EuclidsTriple" />
-    <label for="triple">Euclid's Triple(a+b)</label> <br />
+    <label for="triple">Euclid's Triple(a,b : a&gt;b)</label> <br />
     <div />
     <!-- /* Additional Input for certain formulas | Hidden by default */ -->
     <!-- /*Input Field 1*/ -->
