--- a/hello.html
+++ b/hello.html
@@ -26,11 +26,13 @@
     <input type="radio" id="kPermutations" name="group1" value="kPermutations" />
     <label for="kPerm">kPermutations(n! / (n-k)!)</label> <br />
     <input type="radio" id="GCD" name="group1" value="GCD" />
-    <label for="Euclid">Eculid's GCD</label> <br />
+    <label for="Eculid">Eculid's GCD</label> <br />
     <input type="radio" id="ArithmeticSeries" name="group1" value="ArithmeticSeries" />
     <label for="ArithSr">Arithmetic Series</label> <br />
     <input type="radio" id="ArithmeticSequence" name="group1" value="ArithmeticSequence" />
     <label for="ArithSq">Arithmetic Sequence</label> <br />
+    <input type="radio" id="EuclidsTriple" name="group1" value="EuclidsTriple" />
+    <label for="triple">Euclid's Triple(a,b : a&gt;b)</label> <br />
     <div />
     <!-- /* Additional Input for certain formulas | Hidden by default */ -->
     <!-- /*Input Field 1*/ -->
