Added new styling to title, and inputs to hello.css. Added new formula permutation to hello.html and test.js.

--- a/hello.html
+++ b/hello.html
@@ -9,22 +9,26 @@
 </head>
 
 <body>
+  <div class="title">
   <h1>QuickCalc</h1>
+  </div>
 
   <!-- /* Radio buttons to choose expression */ -->
   <div id="radio-buttons">
     <input type="radio" id="addition" name="group1" value="add" />
-    <label for="add">addition(a+b)</label> <br />
+    <label for="add">Addition(a+b)</label> <br />
     <input type="radio" id="subtraction" name="group1" value="subtract" />
-    <label for="sub">subtraction(a-b)</label> <br />
+    <label for="sub">Subtraction(a-b)</label> <br />
     <input type="radio" id="multiplication" name="group1" value="multi" />
-    <label for="multi">multiplication(a*b)</label> <br />
+    <label for="multi">Multiplication(a*b)</label> <br />
     <input type="radio" id="division" name="group1" value="divide" />
-    <label for="div">division(a/b)</label> <br />
+    <label for="div">Division(a/b)</label> <br />
     <input type="radio" id="factorial" name="group1" value="factorial" />
-    <label for="fact">factorial(n!)</label> <br />
-    <input type="radio" id="kPermutations" name="group1" value="kPermutations" />
-    <label for="kPerm">kPermutations(n! / (n-k)!)</label> <br />
+    <label for="fact">Factorial(n!)</label> <br />
+    <input type="radio" id="permutations" name="group1" value="permutations" />
+    <label for="Perm">Permutations(a^b)</label> <br />
+    <input type="radio" id="kPermutations" name="group1" value="kPermutations " />
+    <label for="kPerm">k-Permutations(n! / (n-k)!)</label> <br />
     <input type="radio" id="GCD" name="group1" value="GCD" />
     <label for="Eculid">Eculid's GCD</label> <br />
     <input type="radio" id="ArithmeticSeries" name="group1" value="ArithmeticSeries" />
