--- a/quickCalc.html
+++ b/quickCalc.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./hello.css" />
+  <link rel="stylesheet" href="./quickCalc.css" />
 </head>
 
 <body>
@@ -50,13 +50,14 @@
     <div class="in3" style="visibility:hidden">
       <input type="text" placeholder="r" id="thirdNumber" />
     </div>
+    
     <!-- /*Calculate Button*/ -->
     <button id="Calculate">Calculate</button>
     <!-- /*Answer Div*/ -->
     <div class="res">
       <p id="ans"></p>
     </div>
-    <script src="./test.js" type="module"></script>
+    <script src="./quickCalc.js" type="module"></script>
 </body>
 
 </html>
