Button Styling, Output History, Error Handling  (#3)
* Added Eculid's Triple to hello.html

* Added Euclid's Triple calculation to test.js

* Corrected (a+b) on Eculids Triple label and added Verdana font"

* Added new styling to title, and inputs to hello.css. Added new formula permutation to hello.html and test.js.

* Chaged button to match theme, added output history, added error handling.

--- a/quickCalc.html
+++ b/quickCalc.html
@@ -13,6 +13,8 @@
   <h1>QuickCalc</h1>
   </div>
 
+<div class="contentBody">
+
   <!-- /* Radio buttons to choose expression */ -->
   <div id="radio-buttons">
     <input type="radio" id="addition" name="group1" value="add" />
@@ -57,6 +59,14 @@
     <div class="res">
       <p id="ans"></p>
     </div>
+
+  </div>
+
+    <!-- History Display -->
+    <div class="historyLog">
+      <p id="history">History</p>
+    </div>
+
     <script src="./quickCalc.js" type="module"></script>
 </body>
 
